--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -83,10 +83,16 @@ h1 {
 }
 
 .current-weather{
-    padding: auto;
+    padding: 0 0 0 0 ;
+    margin: 2% 30% 2% 30%;
+    background-color: white;
 }
 
 .five-day-forecast {
+    padding: 0 0 0 0   ;
+    margin-top: 5%;
+}
 
-    margin-top: 10%;
+.card {
+    margin: 2% 30% 2% 30%;
 }
