--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -23,7 +23,7 @@ html body {
 
 /* Header */
 h1 {
-    background-color: rgba(27, 49, 114, 0.215);
+    /* background-color: rgba(27, 49, 114, 0.215); */
     margin-top: 0%;
 }
 
